# todo: change after https://github.com/python-poetry/poetry/pull/9135 lands in a release

[tool.poetry]
name = "ravetools"
version = "0.1.0"
description = ""
authors = ["erin petra sofiya moon <erin@hecke.rs>"]

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.24.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
tinytag = "^1.10.1"
rapidfuzz = "^3.10.0"
jinja2 = "^3.1.4"
tqdm = "^4.67.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
ipython = "^8.31.0"

[tool.poetry.scripts]
ravelibrarian = "ravetools.ravelibrarian:cli"
lyricspider = "ravetools.lyricspider:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
